				Ivy 
				- The agile open source dependency manager
				- http://www.jayasoft.org/ivy
				============================================
				
for detailed view of each issue, please consult http://jira.jayasoft.org/

   version 1.4.1 - not yet released
=====================================
- IMPROVE: Measure code coverage (IVY-323)
- IMPROVE: Add a 'conf' parameter to the ivy 'publish' ant task (IVY-322) (thanks to Emmanuel Pellereau)

- FIX: IVY complains about non-existent reports in the cache directory (IVY-315)
- FIX: Typo in failureproperty attribute of Ant resolve task (IVY-327) (thanks to Jean-Baptiste Quenot)
- FIX: ivy:resolve useOrigin fails to behave correctly (IVY-332)
- FIX: ChainVersionMatcher doesn't handle IvyAware children version matchers (IVY-331)
- FIX: latest.<status> does not work properly when no matching revision exist (IVY-318)
- FIX: attribute name in macrodef is not handled as expected (IVY-319)


   version 1.4 - 2006-10-09
=====================================
Version 1.4-RC2 has been promoted to 1.4 on 2006-10-09, with documentation update.

Known bugs and limitations:
- references in resolvers are not resolved 'in-time' with macrodef (IVY-319)
- latest.<status> does not work properly when no matching revision exist (IVY-318)
- IVY complains about non-existent reports in the cache directory (IVY-315)
- retrieve fails when resolve is done with useOrigin set to true (IVY-304)


   version 1.4-RC2 - 2006-09-27
=====================================
- FIX: m2compatible flag is ignored for display of failed artifact searches (IVY-303)
- FIX: AntCallTriggerTest and AntBuildTriggerTest fail when run from ivy build.xml (IVY-310)
- FIX: Classloader problem with ant (IVY-311)
- FIX: Make resolve overview more compact (IVY-299)
- FIX: Could not write to "tmp:///webdav_tmp.c1" because it is read-only (IVY-312)

   version 1.4-RC1 - 2006-09-17
=================================
Incompatibility with previous versions: