@@ -11785,6 +11785,10 @@ name|depmd
 argument_list|,
 name|toResolver
 argument_list|,
+name|Collections
+operator|.
+name|singleton
+argument_list|(
 name|cache
 operator|.
 name|getAbsolutePath
@@ -11794,6 +11798,7 @@ literal|"/"
 operator|+
 name|getCacheArtifactPattern
 argument_list|()
+argument_list|)
 argument_list|,
 name|cache
 operator|.
@@ -14939,7 +14944,6 @@ literal|null
 argument_list|)
 return|;
 block|}
-comment|/**      * Publishes a module to the repository.      *       * The publish can update the ivy file to publish if update is set to true. In this case it will use      * the given pubrevision, pubdate and status. If pudate is null it will default to the current date.      * If status is null it will default to the current ivy file status (which itself defaults to integration if none is found).      * If update is false, then if the revision is not the same in the ivy file than the one expected (given as parameter),      * this method will fail with an  IllegalArgumentException.      * pubdate and status are not used if update is false.      * extra artifacts can be used to publish more artifacts than actually declared in the ivy file.      * This can be useful to publish additional metadata or reports.      * The extra artifacts array can be null (= no extra artifacts), and if non null only the name, type, ext url       * and extra attributes of the artifacts are really used. Other methods can return null safely.       *       * @param mrid      * @param pubrevision      * @param cache      * @param srcArtifactPattern      * @param resolverName      * @param srcIvyPattern      * @param status      * @param pubdate      * @param validate      * @param overwrite      * @param update      * @return      * @throws IOException      */
 specifier|public
 name|Collection
 name|publish
@@ -14954,6 +14958,90 @@ name|File
 name|cache
 parameter_list|,
 name|String
+name|srcArtifactPattern
+parameter_list|,
+name|String
+name|resolverName
+parameter_list|,
+name|String
+name|srcIvyPattern
+parameter_list|,
+name|String
+name|status
+parameter_list|,
+name|Date
+name|pubdate
+parameter_list|,
+name|Artifact
+index|[]
+name|extraArtifacts
+parameter_list|,
+name|boolean
+name|validate
+parameter_list|,
+name|boolean
+name|overwrite
+parameter_list|,
+name|boolean
+name|update
+parameter_list|,
+name|String
+name|conf
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|publish
+argument_list|(
+name|mrid
+argument_list|,
+name|pubrevision
+argument_list|,
+name|cache
+argument_list|,
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+name|srcArtifactPattern
+argument_list|)
+argument_list|,
+name|resolverName
+argument_list|,
+name|srcIvyPattern
+argument_list|,
+name|status
+argument_list|,
+name|pubdate
+argument_list|,
+name|extraArtifacts
+argument_list|,
+name|validate
+argument_list|,
+name|overwrite
+argument_list|,
+name|update
+argument_list|,
+name|conf
+argument_list|)
+return|;
+block|}
+comment|/**      * Publishes a module to the repository.      *       * The publish can update the ivy file to publish if update is set to true. In this case it will use      * the given pubrevision, pubdate and status. If pudate is null it will default to the current date.      * If status is null it will default to the current ivy file status (which itself defaults to integration if none is found).      * If update is false, then if the revision is not the same in the ivy file than the one expected (given as parameter),      * this method will fail with an  IllegalArgumentException.      * pubdate and status are not used if update is false.      * extra artifacts can be used to publish more artifacts than actually declared in the ivy file.      * This can be useful to publish additional metadata or reports.      * The extra artifacts array can be null (= no extra artifacts), and if non null only the name, type, ext url       * and extra attributes of the artifacts are really used. Other methods can return null safely.       *       * @param mrid      * @param pubrevision      * @param cache      * @param srcArtifactPattern      * @param resolverName      * @param srcIvyPattern      * @param status      * @param pubdate      * @param validate      * @param overwrite      * @param update      * @return      * @throws IOException      */
+specifier|public
+name|Collection
+name|publish
+parameter_list|(
+name|ModuleRevisionId
+name|mrid
+parameter_list|,
+name|String
+name|pubrevision
+parameter_list|,
+name|File
+name|cache
+parameter_list|,
+name|Collection
 name|srcArtifactPattern
 parameter_list|,
 name|String
@@ -15036,13 +15124,6 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
-name|srcArtifactPattern
-operator|=
-name|substitute
-argument_list|(
-name|srcArtifactPattern
-argument_list|)
-expr_stmt|;
 name|srcIvyPattern
 operator|=
 name|substitute
@@ -15491,7 +15572,7 @@ parameter_list|,
 name|DependencyResolver
 name|resolver
 parameter_list|,
-name|String
+name|Collection
 name|srcArtifactPattern
 parameter_list|,
 name|String
@@ -15771,22 +15852,128 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-comment|//   1) copy the artifact using src pattern and resolver
-if|if
-condition|(
+comment|//   1) copy the artifact using src patterns and resolver
+name|boolean
+name|published
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+name|iterator
+init|=
+name|srcArtifactPattern
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+operator|&&
 operator|!
+name|published
+condition|;
+control|)
+block|{
+name|String
+name|pattern
+init|=
+operator|(
+name|String
+operator|)
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|published
+operator|=
 name|publish
 argument_list|(
 name|artifact
 argument_list|,
-name|srcArtifactPattern
+name|substitute
+argument_list|(
+name|pattern
+argument_list|)
 argument_list|,
 name|resolver
 argument_list|,
 name|overwrite
 argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|published
 condition|)
 block|{
+name|Message
+operator|.
+name|info
+argument_list|(
+literal|"missing artifact "
+operator|+
+name|artifact
+operator|+
+literal|":"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Iterator
+name|iterator
+init|=
+name|srcArtifactPattern
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|String
+name|pattern
+init|=
+operator|(
+name|String
+operator|)
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|Message
+operator|.
+name|info
+argument_list|(
+literal|"\t"
+operator|+
+operator|new
+name|File
+argument_list|(
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|pattern
+argument_list|,
+name|artifact
+argument_list|)
+argument_list|)
+operator|+
+literal|" file does not exist"
+argument_list|)
+expr_stmt|;
+block|}
 name|missing
 operator|.
 name|add
@@ -15828,6 +16015,35 @@ name|overwrite
 argument_list|)
 condition|)
 block|{
+name|Message
+operator|.
+name|info
+argument_list|(
+literal|"missing ivy file for "
+operator|+
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|+
+literal|": "
+operator|+
+operator|new
+name|File
+argument_list|(
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|srcIvyPattern
+argument_list|,
+name|artifact
+argument_list|)
+argument_list|)
+operator|+
+literal|" file does not exist"
+argument_list|)
+expr_stmt|;
 name|missing
 operator|.
 name|add
@@ -15904,21 +16120,6 @@ return|;
 block|}
 else|else
 block|{
-name|Message
-operator|.
-name|info
-argument_list|(
-literal|"missing artifact "
-operator|+
-name|artifact
-operator|+
-literal|": "
-operator|+
-name|src
-operator|+
-literal|" file does not exist"
-argument_list|)
-expr_stmt|;
 return|return
 literal|false
 return|;
