@@ -91,6 +91,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -245,10 +255,12 @@ init|=
 literal|null
 decl_stmt|;
 specifier|private
-name|String
+name|List
 name|_artifactspattern
 init|=
-literal|null
+operator|new
+name|ArrayList
+argument_list|()
 decl_stmt|;
 specifier|private
 name|File
@@ -569,7 +581,24 @@ name|getArtifactspattern
 parameter_list|()
 block|{
 return|return
+operator|(
+name|String
+operator|)
+operator|(
 name|_artifactspattern
+operator|.
+name|isEmpty
+argument_list|()
+condition|?
+literal|null
+else|:
+name|_artifactspattern
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|)
 return|;
 block|}
 specifier|public
@@ -581,8 +610,51 @@ name|artifactsPattern
 parameter_list|)
 block|{
 name|_artifactspattern
-operator|=
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|_artifactspattern
+operator|.
+name|add
+argument_list|(
 name|artifactsPattern
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|addArtifactspattern
+parameter_list|(
+name|String
+name|artifactsPattern
+parameter_list|)
+block|{
+name|_artifactspattern
+operator|.
+name|add
+argument_list|(
+name|artifactsPattern
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|addConfiguredArtifacts
+parameter_list|(
+name|ArtifactsPattern
+name|p
+parameter_list|)
+block|{
+name|_artifactspattern
+operator|.
+name|add
+argument_list|(
+name|p
+operator|.
+name|getPattern
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
@@ -679,17 +751,42 @@ name|getDefaultCache
 argument_list|()
 expr_stmt|;
 block|}
+if|if
+condition|(
 name|_artifactspattern
-operator|=
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|String
+name|p
+init|=
 name|getProperty
 argument_list|(
-name|_artifactspattern
+literal|null
 argument_list|,
 name|ivy
 argument_list|,
 literal|"ivy.publish.src.artifacts.pattern"
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|p
+operator|!=
+literal|null
+condition|)
+block|{
+name|_artifactspattern
+operator|.
+name|add
+argument_list|(
+name|p
+argument_list|)
 expr_stmt|;
+block|}
+block|}
 if|if
 condition|(
 name|_srcivypattern
@@ -699,7 +796,8 @@ condition|)
 block|{
 name|_srcivypattern
 operator|=
-name|_artifactspattern
+name|getArtifactspattern
+argument_list|()
 expr_stmt|;
 block|}
 name|_status
@@ -761,8 +859,9 @@ block|}
 if|if
 condition|(
 name|_artifactspattern
-operator|==
-literal|null
+operator|.
+name|isEmpty
+argument_list|()
 condition|)
 block|{
 throw|throw
@@ -1599,6 +1698,38 @@ operator|new
 name|HashMap
 argument_list|()
 return|;
+block|}
+block|}
+specifier|public
+specifier|static
+class|class
+name|ArtifactsPattern
+block|{
+specifier|private
+name|String
+name|_pattern
+decl_stmt|;
+specifier|public
+name|String
+name|getPattern
+parameter_list|()
+block|{
+return|return
+name|_pattern
+return|;
+block|}
+specifier|public
+name|void
+name|setPattern
+parameter_list|(
+name|String
+name|pattern
+parameter_list|)
+block|{
+name|_pattern
+operator|=
+name|pattern
+expr_stmt|;
 block|}
 block|}
 block|}
