@@ -562,6 +562,172 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testMultiPatterns
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|_project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-publish-multi.xml"
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|res
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|res
+operator|.
+name|setProject
+argument_list|(
+name|_project
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|_publish
+operator|.
+name|setPubrevision
+argument_list|(
+literal|"1.2"
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|setResolver
+argument_list|(
+literal|"1"
+argument_list|)
+expr_stmt|;
+name|File
+name|art
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/1/multi1-1.2.jar"
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.1/jars/mod1.1-1.0.jar"
+argument_list|)
+argument_list|,
+name|art
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|art
+operator|=
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/2/multi2-1.2.jar"
+argument_list|)
+expr_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.1/jars/mod1.1-1.0.jar"
+argument_list|)
+argument_list|,
+name|art
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|addArtifactspattern
+argument_list|(
+literal|"build/test/publish/1/[artifact]-[revision].[ext]"
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|addArtifactspattern
+argument_list|(
+literal|"build/test/publish/2/[artifact]-[revision].[ext]"
+argument_list|)
+expr_stmt|;
+name|_publish
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+comment|// should have do the ivy delivering
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"build/test/publish/1/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// should have published the files with "1" resolver
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/jayasoft/multi/ivys/ivy-1.2.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/jayasoft/multi/jars/multi1-1.2.jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/jayasoft/multi/jars/multi2-1.2.jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testCustom
 parameter_list|()
 throws|throws
