@@ -7,6 +7,7 @@ for detailed view of each issue, please consult http://jira.jayasoft.org/
 
    version 1.4.1 - not yet released
 =====================================
+- IMPROVE: Artifact pattern list attribute for the ivy:publish (IVY-113)
 - IMPROVE: Measure code coverage (IVY-323)
 - IMPROVE: Add a 'conf' parameter to the ivy 'publish' ant task (IVY-322) (thanks to Emmanuel Pellereau)
 
